[gd_scene load_steps=14 format=3 uid="uid://d4jf6o5cochxe"]

[ext_resource type="Script" path="res://SF1/Characters/GenericBattleScene.gd" id="1_12ay8"]
[ext_resource type="Texture2D" uid="uid://obn7lftu7567" path="res://Assets/SF1/Genesis 32X SCD - Shining Force - Battle Foregrounds.png" id="2_hmbx8"]
[ext_resource type="Texture2D" uid="uid://d0xfrqovmknjr" path="res://Assets/SF1/Weapons/Wooden_Rod.png" id="3_1a1nm"]
[ext_resource type="Shader" path="res://Shaders/Dissolve.gdshader" id="4_3dhg6"]
[ext_resource type="Texture2D" uid="uid://dh6ucis8t4ev1" path="res://Assets/SF1/PlayableCharacters/Gong/Unpromoted_Battle_Sprites.png" id="4_j8bni"]
[ext_resource type="Texture2D" uid="uid://bg7u6slhfkm6g" path="res://Shaders/ShaderTextureImages/NoisePixelated.jpg" id="5_xhi6r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qg4uy"]
shader = ExtResource("4_3dhg6")
shader_parameter/dissolve_effect_amount = 0.0
shader_parameter/noise_texture = ExtResource("5_xhi6r")

[sub_resource type="Animation" id="Animation_f5igr"]
resource_name = "Attack"
length = 1.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterWrapper/CharacterSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 0.9, 1.20001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"emit_attack_anticapation_frame_reached"
}, {
"args": [],
"method": &"emit_attack_frame_reached"
}]
}

[sub_resource type="Animation" id="Animation_pby7t"]
resource_name = "Death"
length = 0.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterWrapper/CharacterSprite2D:material:shader_parameter/dissolve_effect_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_sf84d"]
resource_name = "Idle"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterWrapper/CharacterSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterWrapper/CharacterSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -52)]
}

[sub_resource type="Animation" id="Animation_wihvo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterWrapper/CharacterSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterWrapper/CharacterSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -52)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterWrapper/CharacterSprite2D:material:shader_parameter/dissolve_effect_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterWrapper:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kxsye"]
resource_name = "Shake"
length = 0.300005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterWrapper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-8, 4), Vector2(16, 4), Vector2(20, -4), Vector2(4, -4), Vector2(-8, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0my03"]
_data = {
"Attack": SubResource("Animation_f5igr"),
"Death": SubResource("Animation_pby7t"),
"Idle": SubResource("Animation_sf84d"),
"RESET": SubResource("Animation_wihvo"),
"Shake": SubResource("Animation_kxsye")
}

[node name="GongUnpromotedBattleScene" type="Node2D"]
script = ExtResource("1_12ay8")

[node name="GroundSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_hmbx8")
vframes = 9
metadata/_edit_lock_ = true

[node name="CharacterWrapper" type="Node2D" parent="."]

[node name="WeaponSprite2D" type="Sprite2D" parent="CharacterWrapper"]
visible = false
position = Vector2(16, -56)
rotation = 1.93034
texture = ExtResource("3_1a1nm")

[node name="CharacterSprite2D" type="Sprite2D" parent="CharacterWrapper"]
material = SubResource("ShaderMaterial_qg4uy")
position = Vector2(-12, -52)
texture = ExtResource("4_j8bni")
hframes = 3
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_0my03")
}
